# parallel-programming

./: 404.html  CMakeLists.txt  README.adoc  index.html  package-lock.json  package.json  site.yml  sitemap-antora-ui.xml  sitemap-feelpp-antora-ui.xml  sitemap-feelpp-project.xml  sitemap-parallel-programming.xml  sitemap.xml
.github/workflows/: ci.yml
antora-ui/: add-fonts.html  add-static-files.html  admonition-styles.html  build-preview-ui.html  copy-to-clipboard.html  development-workflow.html  index.html  inline-text-styles.html  list-styles.html  prerequisites.html  set-up-project.html  sidebar-styles.html  style-guide.html  stylesheets.html  templates.html  ui-macro-styles.html
antora-ui/cemosis/: index.html  plotly.html  pseudocode.html
docs/: antora.yml
docs/Asciidoc/: ParallelProgramming.adoc  test.adoc
docs/antora/extensions/: cpp-dynamic-processor-collapsible.js  (+1 more)
feelpp-antora-ui/: admonition-styles.html  copy-to-clipboard.html  index.html  inline-text-styles.html  plotly.html  pseudocode.html  source-highlighting.html  style-guide.html
feelpp-antora-ui/asciidoc/: admonitions.html  bold.html  examples.html  highlight.html  italic.html  monospace.html
feelpp-project/: antora.html  cmake.html  githubactions.html  jupyter.html  overview.html  quickstart.html  rename.html  vscode.html
parallel-programming/: CUDA_Coding.html  HEAT_Coding.html  HIP_Coding.html  Hybrid_Coding.html  MPI_Coding.html  OpenMP_Coding.html  PPChapter1.html  PPChapter1_AMD_CUDA.html  PPChapter1_CPU.html  PPChapter1_GPGPU.html  PPChapter1_GPU.html  PPChapter1_SIMD.html  PPChapter1_TPU.html  PPChapter2.html  PPChapter2_Hybrid.html  PPChapter2_MPI.html  PPChapter2_MPI_Boost.html  PPChapter2_OpenMP.html  PPChapter2_OpenMP2.html  PPChapter3.html  PPChapter4.html  PPLinkPDFs.html  PPSummary.html  ParallelProgramming.html  SPECX_Coding.html  antora.html  cmake.html  githubactions.html  index.html  jupyter.html  overview.html  quickstart.html  rename.html  vscode.html
parallel-programming/_attachments/: Session2_ParallelProgramming_MPI.pptx  Session3_ParallelProgramming_HybridOpenMP_MPI.pptx
src/: CMakeLists.txt
src/Cuda/Array_Reduce/: CMakeLists.txt
src/Cuda/Block/: block_min.cu  block_shared_floyd.cu  block_shared_min.ccu  grid_floyd_cooperative_group.cu  grid_min.ccu  thread_floyd.cu
src/Cuda/Jacobi/: CMakeLists.txt
src/Cuda/Vector/MatrixAdd/: CMakeLists.txt
src/Cuda2/Samples/NV12toBGRandResize/: NV12toBGRandResize
src/Cuda2/Samples/UnifiedMemoryPerf/: UnifiedMemoryPerf
src/Cuda2/Samples/concurrentKernels/: concurrentKernels
src/Cuda2/Samples/jacobiCudaGraphs/: jacobiCudaGraphs
src/Cuda2/Samples/matrixMul/: matrixMul
src/Cuda2/Samples/matrixMulDrv/: matrixMulDrv
src/Cuda2/Samples/memMapIPCDrv/: memMapIPCDrv
src/Cuda2/Samples/nvJPEG/: nvJPEG
src/Cuda2/Samples/nvJPEG_encoder/: nvJPEG_encoder
src/Cuda2/Samples/p2pBandwidthLatencyTest/: p2pBandwidthLatencyTest
src/Cuda2/Samples/shfl_scan/: shfl_scan
src/Cuda2/Samples/simpleAttributes/: simpleAttributes
src/Cuda2/Samples/simpleCUBLAS/: simpleCUBLAS
src/Cuda2/Samples/simpleCUBLASXT/: simpleCUBLASXT
src/Cuda2/Samples/simpleCUFFT/: simpleCUFFT
src/Cuda2/Samples/simpleCudaGraphs/: simpleCudaGraphs
src/Cuda2/Samples/simpleDrvRuntime/: simpleDrvRuntime  vectorAdd_kernel64.fatbin
src/Cuda2/Samples/simpleIPC/: simpleIPC
src/Cuda2/Samples/simpleVoteIntrinsics/: simpleVoteIntrinsics
src/Cuda2/Samples/systemWideAtomics/: systemWideAtomics
src/Cuda2/Samples/vectorAddMMAP/: vectorAddMMAP
src/Cuda2/Samples/vectorAdd_nvrtc/: vectorAdd_nvrtc
src/GayaPerformance/HPC_Explorer/: CMakeLists.txt  HPC_Explorer.cpp  Makefile
src/GayaPerformance/HPC_Process/: CMakeLists.txt  HPC_Process.cpp
src/GayaPerformance/src/: CMakeLists.txt
src/HPC_Performance/HPC_Explorer/: HPC_Explorer.cpp
src/HPC_Performance/HPC_Process/: CMakeLists.txt  HPC_Process.cpp  Makefile
src/Heat_Equation_ParallelPrograming_Comparison/Cuda/: CMakeLists.txt
src/Heat_Equation_ParallelPrograming_Comparison/MPI/: CMakeLists.txt  Makefile
src/Heat_Equation_ParallelPrograming_Comparison/MPI_OpenMP/: CMakeLists.txt
src/MPI/: MPI_Allgather.c  MPI_Allreduce.c  MPI_Alltoall.c  MPI_BSEND_OVERHEAD.c  MPI_Barrier.c  MPI_Bcast.c  MPI_Bsend.c  MPI_Bsend_init.c  MPI_Buffer_attach.c  MPI_Buffer_detach.c  MPI_Comm_spawn.c  MPI_Comm_split.c  MPI_Exscan.c  MPI_File.c  MPI_File_close.c  MPI_File_open.c  MPI_Gather.c  MPI_Graph_get.c  MPI_Graph_neighbors.c  MPI_Graph_neighbors_count.c  MPI_Graphdims_get.c  MPI_Iallgather.c  MPI_Iallreduce.c  MPI_Ialltoall.c  MPI_Ibarrier.c  MPI_Ibcast.c  MPI_Ibsend.c  MPI_Ireduce.c  MPI_Ireduce_scatter.c  MPI_Ireduce_scatter_block.c  MPI_Irsend.c  MPI_Iscatterv.c  MPI_Issend.c  MPI_MatrixMultiply.c  MPI_Pi_Integration.c  MPI_RandomWalk.cpp  MPI_Reduce.c  MPI_Reduce_scatter.c  MPI_Reduce_scatter_block.c  MPI_Rsend.c  (+15 more)
src/MPI/MPI_1/: CMakeLists.txt
src/MPI/MPI_2/: CMakeLists.txt  Nota.txt
src/MPI/MPI_3/: CMakeLists.txt  MPI_Integration2D.cb  MPI_Pi_Parallel_bench.cb  MPI_Pi_parallel.cb  MPI_RandomWalk.cpp
src/OpenMP/: CMakeLists.txt  Makefile  OpenMP_In_reduction.cpp  OpenMP_Lastprivate.cpp  OpenMP_Linear.cpp  OpenMP_None.cpp  OpenMP_Private.cpp  OpenMP_Reduction.cpp  OpenMP_Schedule.cpp  OpenMP_Shared.cpp  OpenMP_Start.cpp  OpenMP_Task.cpp  OpenMP_Task_group.cpp  OpenMP_Task_reduction.cpp  OpenMP_Task_wait.cpp
src/OpenMP2/Map_reduce/: CMakeLists.txt
src/OpenStar/Hybrid/Jacobi/: CMakeLists.txt  HYBRID_Jacobi.c  Makefile
src/OpenStar/OpenCV_MPI/: CMakeLists.txt  Exp001.cpp
src/OpenStar/OpenMP_MPI/: CMakeLists.txt  Makefile  OpenMP_MPI_Threading.c  OpenMP_MPI_Threading_Q.c
src/Quicksort/: CMakeLists.txt  Makefile  QuickSortOpenMP_Vers2.cpp  QuickSortPosixThreads_Vers2.cpp
src/Specs/: CMakeLists.txt  Test.cpp  Test2.cpp
src/Specx/: CMakeCache.txt  CMakeLists copy.txt  CMakeLists.txt  COPCMakeLists.txt  COPCMakeLists2.txt  SPECX_Test.bcpp  SPECX_Test.cpp  SPECX_Test2.cpp  SPECX_TestRace.bcpp  SPECX_TestVectorBuffer.bcpp  Test2.cpp  TestPromise.cpp
src/Tools/: mpi_cuda_awareness_check.cpp
(+32 files in other folders)
